# BinaryCodeWord

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BinaryCodeWordConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
include/BinaryCodeWord/: BinaryCodeWord.hpp
include/BinaryCodeWord/detail/: ErrorMessages.hpp
src/: BinaryCodeWord.cpp
tests/: CMakeLists.txt  test_BinaryCodeWord.cpp
